src/snapshots/similar__udiff__unified_diff_newline_hint.snap
---
source: src/udiff.rs
expression: "&diff.unified_diff().header(\"a.txt\", \"b.txt\").to_string()"
---
--- a.txt
+++ b.txt
@@ -0 +0 @@
-a
+b
\ No newline at end of file

